objects/Strategy2TrainingEvent__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Strategy__r.SFDC_Acct_Plan__r.Id,Strategy__r.SFDC_Acct_Plan__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Status__c</fullName>
        <formula>Text(Strategy__r.Strategy_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>SFDC_Strategy__c</referenceTo>
        <relationshipLabel>Related Training Events</relationshipLabel>
        <relationshipName>Strategy2TrainingEvent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECreated_Date__c</fullName>
        <formula>Training_Event__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training_Event__r.Training_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event_Identifier__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Training_Event__r.Id , Training_Event__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Event Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategy2TrainingEvent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <formula>Training_Event__r.Training_Name__c</formula>
        <label>Training Name</label>
        <type>Text</type>
    </fields>
    <label>Link to Existing Training Event</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>TrainingEvent2Opty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link to Existing Training Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>